// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can navigate all ballot pages 1`] = `
.c0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  box-sizing: border-box;
  cursor: pointer;
  background: #4caf50;
  border: none;
  border-radius: 0.25rem;
  padding: 0.4rem 0.7rem;
  color: white;
  line-height: 1;
  white-space: nowrap;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 1rem;
}

.c2 {
  width: 100%;
  max-width: 40rem;
  margin: auto auto;
}

.c3 {
  line-height: 1.3;
  max-width: 66ch;
  text-align: center;
  margin: auto;
}

.c3 h1 {
  margin: 2rem 0 1rem;
}

.c3 h2 {
  margin: 1.5rem 0 1rem;
}

.c3 h3,
.c3 p {
  margin: 1rem 0;
}

.c3 h1 + p,
.c3 h2 + p,
.c3 h3 + p {
  margin-top: -0.75rem;
}

.c3 > :first-child {
  margin-top: 0;
}

.c3 > :last-child {
  margin-bottom: 0;
}

@media print {
  .c1 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    margin: 0;
  }
}

<div
  class="c0"
>
  <main
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <h1>
          General Election
        </h1>
        <p>
          November 3, 2020
          <br />
          Lorem County, State of Ipsumana
        </p>
        <p>
          <button
            class="c4"
            type="button"
          >
            Get Started
          </button>
        </p>
      </div>
    </div>
  </main>
</div>
`;

exports[`can navigate all ballot pages 2`] = `
<div
  class="sc-bdVaJa eVuSVk"
>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 1rem;
}

.c1 {
  width: 100%;
  max-width: 40rem;
  margin: 0 auto;
}

.c2 {
  margin: 0;
  border: none;
  padding: 0;
}

.c3 {
  font-weight: bold;
  font-size: 2em;
  margin: 0.67em 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 1rem;
  border: 1px solid lightgrey;
  background: transparent;
  padding: 0.5rem;
}

.c5:last-child {
  margin-bottom: 0;
}

.c5:focus-within {
  outline: -webkit-focus-ring-color auto 5px;
}

.c6 {
  margin-right: 0.5rem;
}

@media print {
  .c0 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    margin: 0;
  }
}

<main
    class="c0"
  >
    <div
      class="c1"
    >
      <fieldset
        class="c2"
      >
        <legend
          class="c3"
        >
          President
        </legend>
        <p>
          Vote for one
        </p>
        <div
          class="c4"
        >
          <label
            class="c5"
            for="minnieMouse"
          >
            <input
              class="c6"
              id="minnieMouse"
              name="president"
              type="checkbox"
              value="minnieMouse"
            />

            Minnie Mouse
          </label>
          <label
            class="c5"
            for="mickeyMouse"
          >
            <input
              class="c6"
              id="mickeyMouse"
              name="president"
              type="checkbox"
              value="mickeyMouse"
            />

            Mickey Mouse
          </label>
          <label
            class="c5"
            for="donaldDuck"
          >
            <input
              class="c6"
              id="donaldDuck"
              name="president"
              type="checkbox"
              value="donaldDuck"
            />

            Donald Duck
          </label>
        </div>
      </fieldset>
    </div>
  </main>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.5rem;
  background: #455a64;
  border-bottom: 1px solid darkgrey;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > :first-child {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c0 > * {
  margin: 0.25rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  box-sizing: border-box;
  cursor: pointer;
  background: lightgrey;
  border: none;
  border-radius: 0.25rem;
  padding: 0.4rem 0.7rem;
  color: black;
  line-height: 1;
  white-space: nowrap;
}

.c2 {
  color: white;
  text-align: center;
}

@media print {
  .c0 {
    display: none;
  }
}

<nav
    class="c0"
  >
    <button
      class="c1"
      type="button"
    >
      Next
    </button>
    <button
      class="c1"
      type="button"
    >
      Previous
    </button>
    <p
      class="c2"
    >
      1
       of
      2
    </p>
  </nav>
  .c0 {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.5rem;
  background: #455a64;
  border-bottom: 1px solid darkgrey;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > :first-child {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c0 > * {
  margin: 0.25rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  box-sizing: border-box;
  cursor: pointer;
  background: lightgrey;
  border: none;
  border-radius: 0.25rem;
  padding: 0.4rem 0.7rem;
  color: black;
  line-height: 1;
  white-space: nowrap;
}

@media print {
  .c0 {
    display: none;
  }
}

<nav
    class="c0"
  >
    <button
      class="c1"
      type="button"
    >
      Review
    </button>
    <button
      class="c1"
      type="button"
    >
      Help
    </button>
    <button
      class="c1"
      type="button"
    >
      Settings
    </button>
    <div />
  </nav>
</div>
`;

exports[`can navigate all ballot pages 3`] = `
<div
  class="sc-bdVaJa eVuSVk"
>
  <main
    class="sc-bxivhb ciWJjj"
  >
    <div
      class="sc-ifAKCX btqGcd"
    >
      <fieldset
        class="sc-bZQynM jpyzzF"
      >
        <legend
          class="sc-gzVnrw eHpwUp"
        >
          Senator
        </legend>
        <p>
          Vote for one
        </p>
        <div
          class="sc-htoDjs ilsOVI"
        >
          .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 1rem;
  border: 1px solid lightgrey;
  background: transparent;
  padding: 0.5rem;
}

.c0:last-child {
  margin-bottom: 0;
}

.c0:focus-within {
  outline: -webkit-focus-ring-color auto 5px;
}

.c1 {
  margin-right: 0.5rem;
}

<label
            class="c0"
            for="chadHanging"
          >
            <input
              class="c1"
              id="chadHanging"
              name="senator"
              type="checkbox"
              value="chadHanging"
            />

            Chad Hanging
          </label>
          .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 1rem;
  border: 1px solid lightgrey;
  background: transparent;
  padding: 0.5rem;
}

.c0:last-child {
  margin-bottom: 0;
}

.c0:focus-within {
  outline: -webkit-focus-ring-color auto 5px;
}

.c1 {
  margin-right: 0.5rem;
}

<label
            class="c0"
            for="levErmachine"
          >
            <input
              class="c1"
              id="levErmachine"
              name="senator"
              type="checkbox"
              value="levErmachine"
            />

            Lev Ermachine
          </label>
          .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 1rem;
  border: 1px solid lightgrey;
  background: transparent;
  padding: 0.5rem;
}

.c0:last-child {
  margin-bottom: 0;
}

.c0:focus-within {
  outline: -webkit-focus-ring-color auto 5px;
}

.c1 {
  margin-right: 0.5rem;
}

<label
            class="c0"
            for="johnSmith"
          >
            <input
              class="c1"
              id="johnSmith"
              name="senator"
              type="checkbox"
              value="johnSmith"
            />

            John Smith
          </label>
        </div>
      </fieldset>
    </div>
  </main>
  <nav
    class="sc-bwzfXH gXteod"
  >
    <button
      class="sc-htpNat eybfyW"
      type="button"
    >
      Review
    </button>
    <button
      class="sc-htpNat eybfyW"
      type="button"
    >
      Previous
    </button>
    <p
      class="sc-EHOje kYLbIg"
    >
      2
       of
      2
    </p>
  </nav>
  <nav
    class="sc-bwzfXH bKLUfy"
  >
    <button
      class="sc-htpNat eybfyW"
      type="button"
    >
      Review
    </button>
    <button
      class="sc-htpNat eybfyW"
      type="button"
    >
      Help
    </button>
    <button
      class="sc-htpNat eybfyW"
      type="button"
    >
      Settings
    </button>
    <div />
  </nav>
</div>
`;

exports[`can navigate all ballot pages 4`] = `
<div
  class="sc-bdVaJa eVuSVk"
>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 1rem;
}

.c1 {
  width: 100%;
  max-width: 40rem;
  margin: 0 auto;
}

.c7 {
  color: gray;
}

.c3 {
  line-height: 1.3;
  max-width: 66ch;
}

.c3 h1 {
  margin: 2rem 0 1rem;
}

.c3 h2 {
  margin: 1.5rem 0 1rem;
}

.c3 h3,
.c3 p {
  margin: 1rem 0;
}

.c3 h1 + p,
.c3 h2 + p,
.c3 h3 + p {
  margin-top: -0.75rem;
}

.c3 > :first-child {
  margin-top: 0;
}

.c3 > :last-child {
  margin-bottom: 0;
}

.c2 {
  margin: 1rem 0;
}

.c4 {
  width: 100%;
  max-width: 66ch;
  text-align: left;
  border-bottom: 1px solid lightGrey;
}

.c5 {
  width: 50%;
  padding: 0.5rem 0.25rem;
  border-top: none;
}

.c6 {
  width: 50%;
  padding: 0.5rem 0.25rem;
  border-top: 1px solid lightGrey;
}

@media print {
  .c0 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    margin: 0;
  }
}

<main
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <h1>
            Official Ballot
          </h1>
          <p
            class="no-print"
          >
            Please review your ballot. Confirm your votes by selecting the “Print Ballot” button.
          </p>
        </div>
      </div>
      <table
        class="c4"
      >
        <caption
          class="no-print visually-hidden"
        >
          <p>
            Summary of your votes.
          </p>
        </caption>
        <thead
          class="no-print"
        >
          <tr>
            <th
              class="c5"
              scope="col"
            >
              Contest
            </th>
            <th
              class="c5"
              scope="col"
            >
              Vote
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <th
              class="c6"
            >
              President

            </th>
            <td
              class="c6"
            >
              <span
                class="c7"
              >
                no selection
              </span>

              <small
                class="no-print"
              >
                <a
                  href="/contests/president"
                >
                  change
                </a>
              </small>
            </td>
          </tr>
          <tr>
            <th
              class="c6"
            >
              Senator

            </th>
            <td
              class="c6"
            >
              <span
                class="c7"
              >
                no selection
              </span>

              <small
                class="no-print"
              >
                <a
                  href="/contests/senator"
                >
                  change
                </a>
              </small>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </main>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.5rem;
  background: #455a64;
  border-bottom: 1px solid darkgrey;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > :first-child {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c0 > * {
  margin: 0.25rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  box-sizing: border-box;
  cursor: pointer;
  background: #4caf50;
  border: none;
  border-radius: 0.25rem;
  padding: 0.4rem 0.7rem;
  color: white;
  line-height: 1;
  white-space: nowrap;
}

.c2 {
  box-sizing: border-box;
  cursor: pointer;
  background: lightgrey;
  border: none;
  border-radius: 0.25rem;
  padding: 0.4rem 0.7rem;
  color: black;
  line-height: 1;
  white-space: nowrap;
}

@media print {
  .c0 {
    display: none;
  }
}

<nav
    class="c0"
  >
    <button
      class="c1"
      type="button"
    >
      Print Ballot
    </button>
    <button
      class="c2"
      type="button"
    >
      Back
    </button>
    <button
      class="c2"
      type="button"
    >
      New Ballot
    </button>
    <div />
    <div />
  </nav>
</div>
`;

exports[`can navigate all ballot pages 5`] = `
<div
  class="sc-bdVaJa eVuSVk"
>
  .c3 {
  box-sizing: border-box;
  cursor: pointer;
  background: #4caf50;
  border: none;
  border-radius: 0.25rem;
  padding: 0.4rem 0.7rem;
  color: white;
  line-height: 1;
  white-space: nowrap;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 1rem;
}

.c1 {
  width: 100%;
  max-width: 40rem;
  margin: auto auto;
}

.c2 {
  line-height: 1.3;
  max-width: 66ch;
  text-align: center;
  margin: auto;
}

.c2 h1 {
  margin: 2rem 0 1rem;
}

.c2 h2 {
  margin: 1.5rem 0 1rem;
}

.c2 h3,
.c2 p {
  margin: 1rem 0;
}

.c2 h1 + p,
.c2 h2 + p,
.c2 h3 + p {
  margin-top: -0.75rem;
}

.c2 > :first-child {
  margin-top: 0;
}

.c2 > :last-child {
  margin-bottom: 0;
}

@media print {
  .c0 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    margin: 0;
  }
}

<main
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <h1>
          General Election
        </h1>
        <p>
          November 3, 2020
          <br />
          Lorem County, State of Ipsumana
        </p>
        <p>
          <button
            class="c3"
            type="button"
          >
            Get Started
          </button>
        </p>
      </div>
    </div>
  </main>
</div>
`;

exports[`redirects contests index to first contest 1`] = `
.c0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.5rem;
  background: #455a64;
  border-bottom: 1px solid darkgrey;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 > :first-child {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c8 > * {
  margin: 0.25rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c11 {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.5rem;
  background: #455a64;
  border-bottom: 1px solid darkgrey;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 > :first-child {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c11 > * {
  margin: 0.25rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c9 {
  box-sizing: border-box;
  cursor: pointer;
  background: lightgrey;
  border: none;
  border-radius: 0.25rem;
  padding: 0.4rem 0.7rem;
  color: black;
  line-height: 1;
  white-space: nowrap;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 1rem;
}

.c2 {
  width: 100%;
  max-width: 40rem;
  margin: 0 auto;
}

.c10 {
  color: white;
  text-align: center;
}

.c3 {
  margin: 0;
  border: none;
  padding: 0;
}

.c4 {
  font-weight: bold;
  font-size: 2em;
  margin: 0.67em 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 1rem;
  border: 1px solid lightgrey;
  background: transparent;
  padding: 0.5rem;
}

.c6:last-child {
  margin-bottom: 0;
}

.c6:focus-within {
  outline: -webkit-focus-ring-color auto 5px;
}

.c7 {
  margin-right: 0.5rem;
}

@media print {
  .c8 {
    display: none;
  }
}

@media print {
  .c11 {
    display: none;
  }
}

@media print {
  .c1 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    margin: 0;
  }
}

<div
  class="c0"
>
  <main
    class="c1"
  >
    <div
      class="c2"
    >
      <fieldset
        class="c3"
      >
        <legend
          class="c4"
        >
          President
        </legend>
        <p>
          Vote for one
        </p>
        <div
          class="c5"
        >
          <label
            class="c6"
            for="minnieMouse"
          >
            <input
              class="c7"
              id="minnieMouse"
              name="president"
              type="checkbox"
              value="minnieMouse"
            />

            Minnie Mouse
          </label>
          <label
            class="c6"
            for="mickeyMouse"
          >
            <input
              class="c7"
              id="mickeyMouse"
              name="president"
              type="checkbox"
              value="mickeyMouse"
            />

            Mickey Mouse
          </label>
          <label
            class="c6"
            for="donaldDuck"
          >
            <input
              class="c7"
              id="donaldDuck"
              name="president"
              type="checkbox"
              value="donaldDuck"
            />

            Donald Duck
          </label>
        </div>
      </fieldset>
    </div>
  </main>
  <nav
    class="c8"
  >
    <button
      class="c9"
      type="button"
    >
      Next
    </button>
    <button
      class="c9"
      type="button"
    >
      Previous
    </button>
    <p
      class="c10"
    >
      1
       of
      2
    </p>
  </nav>
  <nav
    class="c11"
  >
    <button
      class="c9"
      type="button"
    >
      Review
    </button>
    <button
      class="c9"
      type="button"
    >
      Help
    </button>
    <button
      class="c9"
      type="button"
    >
      Settings
    </button>
    <div />
  </nav>
</div>
`;
